Most of fanction was added